fixing padding on mobile

--- a/styles/Layout/DiaperCalculator.scss
+++ b/styles/Layout/DiaperCalculator.scss
@@ -51,7 +51,7 @@
         position: relative;
         width: 100%;
         max-width: 525px;
-        padding: 30px 12px 50px;
+        padding: 30px 12px 100px;
         height: 100vh;
         background: #E7EBF4;
         transform: translateX(100vw);
